refactor: add toggle to force llm query; add info on how the query was formed (preset/open-query/etc)
